<resources>
    <string name="app_name">RentalCar</string>
    <string name="enter_email">Enter email:</string>
    <string name="enter_name">Enter name</string>
    <string name="cars">Cars</string>
    <string name="current">Current</string>
    <string name="completed">Completed</string>
    <string name="penalties">Penalties</string>
    <string name="home">Home</string>
    <string name="zanevskij_pavel">Zanevskij Pavel</string>
    <string name="age">Age: 19</string>
    <string name="edu">Student of GrSU</string>
    <string name="course_spec">Course: 3, Speciality: information technology software</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homefragment">HomeFragment</string>
    <string name="complete_order">Complete order</string>
    <string name="order">Order</string>
    <string name="id">ID</string>
    <string name="duration">Duration</string>
    <string name="total_price">Total price</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="car">Car</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="price">Price</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
</resources>