<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@android:drawable/arrow_down_float"
        android:title="@string/cars" />
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/current" />
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@android:drawable/checkbox_on_background"
        android:title="@string/completed" />
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@android:drawable/presence_busy"
        android:title="@string/penalties" />
</menu>