<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/zanevskij_pavel"

        android:textColor="#F80A0A"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/age"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="108dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/course_spec"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="236dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/edu"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="180dp" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_height="174dp"
        android:padding="5dp"
        android:src="@drawable/p2" />

</TableLayout>